# egs-print-service

./: .gitignore  CLAUDE.md  MANIFEST.in  README.md  install_service.bat  main.py  pyproject.toml  requirements.txt  setup.py  uninstall_service.bat
docs/: OFFICE_NETWORK_SETUP.md
egs_print_service/: DEPRECATED.md  README.md  __init__.py  __main__.py  app.py  client.py  config.py
egs_print_service/handlers/: __init__.py  base.py  escpos.py  evolis.py  sbpl.py  tspl.py  zpl.py
egs_print_service/models/: __init__.py  job.py  printer.py
egs_print_service/web/: index.html
scripts/: print_23_business_cards.py  print_business_card_600dpi.py  print_business_card_front.py  print_food_label.py  print_vikings_bold_white_ribbon.py
