[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "egs-print-service"
version = "1.1.0"
description = "Multi-brand printer management service for label and badge printing"
readme = "README.md"
license = {text = "Proprietary"}
authors = [
    {name = "EGS Software AG", email = "marc@egs.ch"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Printing",
]
dependencies = [
    "flask>=2.0",
    "flask-cors>=4.0",
    "requests>=2.28",
    "Pillow>=9.0",
]

[project.optional-dependencies]
evolis = ["pywin32>=306"]
dev = ["pytest", "pytest-cov", "black", "flake8"]

[project.scripts]
egs-print-service = "egs_print_service.__main__:main"

[project.urls]
Homepage = "https://github.com/marcenggist/egs-print-service"
Repository = "https://github.com/marcenggist/egs-print-service"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
egs_print_service = ["web/*", "web/**/*"]
